# IronEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/iron/: config.h  config.hpp  macros.hpp  result.hpp
include/iron/assets/: asset.hpp  asset_manager.hpp  packager.hpp
include/iron/base/: archive.hpp  archive_reader.hpp  component.hpp  config.hpp  engine.h  engine.hpp  entry.hpp  input_manager.hpp  serializable.hpp  window.hpp
include/iron/fs/: fs_grammar.hpp  fs_map.hpp
include/iron/renderer/: buffer.hpp  material.hpp  mesh.hpp  model.hpp  render_component.hpp  renderer.hpp  renderer_component.hpp  texture.hpp
include/iron/world/: camera.hpp  object.hpp  scene.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  archive.cpp  archive_reader.cpp  config.cpp  config_parser.cpp  config_parser.hpp  engine.cpp  engine.h  entry_util.hpp  input_manager.cpp  object.cpp  result.cpp  scene.cpp  serializable.cpp  window.cpp  window.h
src/assets/: packager.cpp
src/components/: component.cpp
src/config/: config.cpp  config_parser.cpp  entry_util.hpp
src/fs/: fs_grammar.cpp  fs_map.cpp  fs_map.hpp
src/objects/: camera.cpp  object.cpp
src/renderer/: base_renderer.cpp  buffer.cpp  renderer.h  texture.cpp
src/renderer/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
src/renderer/vulkan/: vulkan_renderer.cpp  vulkan_renderer.hpp
